Added search/filter functionality to admin publications & placed the "new" button

--- a/quasar-frontend/src/css/app.scss
+++ b/quasar-frontend/src/css/app.scss
@@ -1,1 +1,8 @@
 // app global css in SCSS form
+.zebra-table tbody tr:nth-child(odd) {
+    background-color: #e2e2e2;
+}
+
+.zebra-table tbody tr:nth-child(even) {
+    background-color: #ffffff;
+}
