More work on broken links admin

--- a/quasar-frontend/src/css/app.scss
+++ b/quasar-frontend/src/css/app.scss
@@ -6,3 +6,9 @@
 .zebra-table tbody tr:nth-child(even) {
     background-color: #ffffff;
 }
+
+.broken-info {
+    background-color: var(--q-info);
+    padding: 1rem;
+    ;
+}
